# NoteSorcerer

./: .gitignore  README.md  ai_assistant.py  app.py  main.py  my_plugin.py  pyproject.toml  requirements.txt  voice_sevice.py
controllers/: conversation_controller.py
examples/telegram/: m.py  telegram_agent.py
modules/: README.md
modules/RealtimeSTT/RealtimeSTT.egg-info/: PKG-INFO
modules/RealtimeTTS/docker/openai-tts-docker/: requirements.txt
modules/logspyq/: .gitignore  README.md  brief.md  run.bat  setup.py
modules/logspyq/examples/: la.py
modules/logspyq/plugin/: README.md  index.ts
modules/logspyq/src/logspyq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/: llm_service.py  stt_service.py  tts_service.py
static/: styles.css
templates/: index.html
