[project]
name = "notesorcerer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.0.0",
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "keyboard>=0.13.5",
    "logspyq",
    "pygame>=2.6.1",
]

[tool.uv.sources]
logspyq = { path = "modules/logspyq" }
