[project]
name = "notesorcerer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "edge-tts>=7.0.0",
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "keyboard>=0.13.5",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "logspyq",
    "pygame>=2.6.1",
    "sentence-transformers>=4.0.1",
    "unstructured[md,pdf]>=0.17.2",
]

[tool.uv.sources]
logspyq = { path = "modules/logspyq" }
